[tool.poetry]
name = "playwright-tutor"
version = "0.1.0"
description = ""
authors = ["Fernando Toledo <fernandohtr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.45.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
